--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,55 @@
 ---
 services:
   netbox: &netbox
-    image: docker.io/netboxcommunity/netbox:${VERSION-v4.2-3.2.1}
+    image: netboxcommunity/netbox:${NETBOX_VERSION:-latest}
+    container_name: netbox
+    user: "unit:root"
+    restart: unless-stopped
     depends_on:
       - postgres
       - redis
-      - redis-cache
-    env_file: env/netbox.env
-    user: "unit:root"
+    networks:
+      default:
+      proxy:
+    expose:
+      - 8080
+    environment:
+      ALLOWED_HOSTS: ${ALLOWED_HOSTS:-netbox}
+      DB_HOST: ${POSTGRES_HOST:-postgres}
+      DB_NAME: ${POSTGRES_DB:-netbox}
+      DB_USER: ${POSTGRES_USER:-netbox}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:?postgres password is required}
+      EMAIL_SERVER: ${EMAIL_SERVER:-localhost}
+      EMAIL_PORT: ${EMAIL_PORT:-25}
+      EMAIL_FROM: ${EMAIL_FROM:-}
+      EMAIL_USERNAME: ${EMAIL_USERNAME:-}
+      EMAIL_PASSWORD: ${EMAIL_PASSWORD:-}
+      EMAIL_USE_SSL: ${EMAIL_USE_SSL:-false}
+      EMAIL_USE_TLS: ${EMAIL_USE_TLS:-false}
+      REDIS_HOST: ${REDIS_HOST:-redis}
+      REDIS_CACHE_HOST: ${REDIS_CACHE_HOST:-redis}
+      SECRET_KEY: ${SECRET_KEY:?netbox secret key is required}
+      TIME_ZONE: ${TIME_ZONE:-UTC}
+      HOUSEKEEPING_INTERVAL: ${HOUSEKEEPING_INTERVAL:-86400}
+      MEDIA_ROOT: ${MEDIA_ROOT:-/opt/netbox/netbox/media}
+      METRICS_ENABLED: ${METRICS_ENABLED:-false}
+      RELEASE_CHECK_URL: https://api.github.com/repos/netbox-community/netbox/releases
     healthcheck:
       test: curl -f http://localhost:8080/login/ || exit 1
       start_period: 90s
       timeout: 3s
       interval: 15s
+    labels:
+      traefik.enable: true
+      traefik.http.routers.netbox.rule: Host(`netbox`)
     volumes:
-      - ./configuration:/etc/netbox/config:z,ro
-      - netbox-media-files:/opt/netbox/netbox/media:rw
-      - netbox-reports-files:/opt/netbox/netbox/reports:rw
-      - netbox-scripts-files:/opt/netbox/netbox/scripts:rw
+      - /containers/netbox/config:/etc/netbox/config:z,ro
+      - /containers/netbox/media:/opt/netbox/netbox/media:rw
+      - /containers/netbox/reports:/opt/netbox/netbox/reports:rw
+      - /containers/netbox/scripts:/opt/netbox/netbox/scripts:rw
   netbox-worker:
     <<: *netbox
+    container_name: netbox-worker
     depends_on:
       netbox:
         condition: service_healthy
@@ -32,8 +62,10 @@ services:
       start_period: 20s
       timeout: 3s
       interval: 15s
+    labels: {} # Redefine the labels to remove those from the netbox service
   netbox-housekeeping:
     <<: *netbox
+    container_name: netbox-housekeeping
     depends_on:
       netbox:
         condition: service_healthy
@@ -44,51 +76,40 @@ services:
       start_period: 20s
       timeout: 3s
       interval: 15s
+    labels: {} # Redefine the labels to remove those from the netbox service
 
-  # postgres
   postgres:
-    image: docker.io/postgres:17-alpine
+    image: postgres:17-alpine
+    container_name: netbox-db
+    restart: unless-stopped
     healthcheck:
       test: pg_isready -q -t 2 -d $$POSTGRES_DB -U $$POSTGRES_USER
       start_period: 20s
       timeout: 30s
       interval: 10s
       retries: 5
-    env_file: env/postgres.env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-netbox}
+      POSTGRES_USER: ${POSTGRES_USER:-netbox}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?postgres password is required}
     volumes:
-      - netbox-postgres-data:/var/lib/postgresql/data
+      - /containers/netbox/db:/var/lib/postgresql/data
 
-  # redis
   redis:
-    image: docker.io/valkey/valkey:8.0-alpine
-    command:
-      - sh
-      - -c # this is to evaluate the $REDIS_PASSWORD from the env
-      - valkey-server --appendonly yes --requirepass $$REDIS_PASSWORD ## $$ because of docker-compose
-    healthcheck: &redis-healthcheck
-      test: '[ $$(valkey-cli --pass "$${REDIS_PASSWORD}" ping) = ''PONG'' ]'
+    image: valkey/valkey:8.0-alpine
+    container_name: netbox-redis
+    restart: unless-stopped
+    healthcheck:
+      test: '[ $$(valkey-cli ping) = ''PONG'' ]'
       start_period: 5s
       timeout: 3s
       interval: 1s
       retries: 5
-    env_file: env/redis.env
     volumes:
-      - netbox-redis-data:/data
-  redis-cache:
-    image: docker.io/valkey/valkey:8.0-alpine
-    command:
-      - sh
-      - -c # this is to evaluate the $REDIS_PASSWORD from the env
-      - valkey-server --requirepass $$REDIS_PASSWORD ## $$ because of docker-compose
-    healthcheck: *redis-healthcheck
-    env_file: env/redis-cache.env
-    volumes:
-      - netbox-redis-cache-data:/data
+      - /containers/netbox/cache:/data
 
-volumes:
-  netbox-media-files:
-  netbox-postgres-data:
-  netbox-redis-cache-data:
-  netbox-redis-data:
-  netbox-reports-files:
-  netbox-scripts-files:
+networks:
+  default:
+    enable_ipv6: true
+  proxy:
+    external: true
