--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,9 +45,9 @@ services:
       traefik.http.routers.netbox.rule: Host(`netbox`)
     volumes:
       - /containers/netbox/config:/etc/netbox/config:z,ro
-      - /containers/netbox/media:/opt/netbox/netbox/media:rw
-      - /containers/netbox/reports:/opt/netbox/netbox/reports:rw
-      - /containers/netbox/scripts:/opt/netbox/netbox/scripts:rw
+      - /containers/netbox/media:/opt/netbox/netbox/media
+      - /containers/netbox/reports:/opt/netbox/netbox/reports
+      - /containers/netbox/scripts:/opt/netbox/netbox/scripts
   netbox-worker:
     <<: *netbox
     container_name: netbox-worker
